--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 <body>
 
     <!-- Preloader -->
-<div id="preloader">
+<!-- <div id="preloader">
     <div class="preloader-content">
         <div class="spinner"></div>
         <h2>Loading...</h2>
     </div>
 </div>
-
+ -->
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Restaurant</a>
+            <a class="navbar-brand" href="#">Taste GOod</a>
             <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
